--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-mobx-axios",
+  "name": "react-native-redux-axios",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
