--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "start": "react-native-scripts start",
-    "clean": "watchman watch-del-all && rm -rf node_modules/ && npm install",
-    "clean:yarn": "yarn cache clean",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "test": "jest",
+    "clean": "rm -rf node_modules/ && npm install",
+    "clean:yarn": "yarn cache clean",
+    "clean:watchman": "watchman watch-del-all && watchman shutdown-server",
     "lint": "eslint 'src/'",
     "lint:fix": "eslint --fix 'src/'",
     "format": "prettier --write 'src/**/*.js'",
