--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
     "husky": "^0.14.3",
-    "jest-expo": "~27.0.0",
+    "jest-expo": "^30.0.0",
     "lint-staged": "^7.1.2",
     "prettier": "^1.13.3",
-    "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "start": "expo start",
+    "eject": "expo eject",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "test": "jest",
     "clean": "rm -rf node_modules/ && npm install",
     "clean:yarn": "yarn cache clean",
@@ -43,12 +42,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "expo": "^27.0.1",
+    "expo": "^30.0.1",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-animatable": "^1.3.0",
     "react-native-platform-touchable": "^1.1.1",
-    "react-navigation": "^2.3.1",
+    "react-navigation": "^2.13.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-axios-middleware": "^4.0.0",
