--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
     "husky": "^0.14.3",
-    "jest-expo": "^30.0.0",
+    "jest-expo": "^31.0.0",
     "lint-staged": "^7.1.2",
     "prettier": "^1.13.3",
     "react-test-renderer": "16.3.1"
   },
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "eject": "expo eject",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -41,14 +41,15 @@
     ]
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "axios": "^0.18.0",
-    "expo": "^30.0.1",
+    "expo": "^31.0.4",
     "prop-types": "^15.6.2",
-    "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
     "react-native-animatable": "^1.3.0",
     "react-native-platform-touchable": "^1.1.1",
-    "react-navigation": "^2.13.0",
+    "react-navigation": "^2.18.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-axios-middleware": "^4.0.0",
