--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.8.2",
-    "husky": "^0.14.3",
-    "jest-expo": "^31.0.0",
-    "lint-staged": "^7.1.2",
-    "prettier": "^1.13.3",
+    "eslint-plugin-react-native": "^3.6.0",
+    "husky": "^2.2.0",
+    "jest-expo": "^33.0.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.17.0",
     "react-test-renderer": "16.3.1"
   },
   "main": "node_modules/expo/AppEntry.js",
@@ -28,11 +31,15 @@
     "clean:watchman": "watchman watch-del-all && watchman shutdown-server",
     "lint": "eslint 'src/'; exit 0",
     "lint:fix": "eslint --fix 'src/'; exit 0",
-    "format": "prettier --write 'src/**/*.js'",
-    "precommit": "lint-staged"
+    "format": "prettier --write 'src/**/*.js'"
   },
   "jest": {
     "preset": "jest-expo"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.js": [
@@ -41,17 +48,21 @@
     ]
   },
   "dependencies": {
-    "@expo/vector-icons": "^6.3.1",
+    "@expo/vector-icons": "^9.0.0",
     "axios": "^0.19.0",
-    "expo": "^31.0.4",
+    "expo": "^33.0.0",
+    "expo-asset": "^5.0.1",
+    "expo-camera": "^5.0.1",
+    "expo-constants": "^5.0.1",
+    "expo-permissions": "^5.0.1",
     "prop-types": "^15.6.2",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-animatable": "^1.3.0",
     "react-native-platform-touchable": "^1.1.1",
-    "react-navigation": "^2.18.2",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
+    "react-navigation": "^3.11.0",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
     "redux-axios-middleware": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
