--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "babel-preset-expo": "^5.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
+    "babel-eslint": "^10.0.3",
+    "babel-preset-expo": "^8.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-immutable": "^1.0.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-react-native": "^3.6.0",
-    "husky": "^2.2.0",
-    "jest-expo": "^33.0.0",
-    "lint-staged": "^8.1.5",
-    "prettier": "^1.17.0",
-    "react-test-renderer": "16.3.1"
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-native": "^3.8.1",
+    "husky": "^4.0.10",
+    "jest-expo": "^36.0.1",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "react-test-renderer": "16.12.0"
   },
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -48,23 +48,28 @@
     ]
   },
   "dependencies": {
-    "@expo/vector-icons": "^9.0.0",
-    "axios": "^0.19.0",
-    "expo": "^33.0.0",
-    "expo-asset": "^5.0.1",
-    "expo-camera": "^5.0.1",
-    "expo-constants": "^5.0.1",
-    "expo-permissions": "^5.0.1",
-    "prop-types": "^15.6.2",
-    "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-animatable": "^1.3.0",
+    "@expo/vector-icons": "^10.0.6",
+    "@react-navigation/compat": "^5.0.0-alpha.26",
+    "@react-navigation/native": "^5.0.0-alpha.27",
+    "axios": "^0.19.1",
+    "expo": "^36.0.2",
+    "expo-asset": "~8.0.0",
+    "expo-camera": "~8.0.0",
+    "expo-constants": "~8.0.0",
+    "expo-permissions": "~8.0.0",
+    "prop-types": "^15.7.2",
+    "react": "16.12.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "~1.5.0",
     "react-native-platform-touchable": "^1.1.1",
-    "react-navigation": "^3.11.0",
-    "react-redux": "^5.1.1",
-    "redux": "^4.0.1",
-    "redux-axios-middleware": "^4.0.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-axios-middleware": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-safe-area-context": "0.6.0"
   }
 }
