--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
-    "@react-navigation/compat": "^5.0.0-alpha.26",
+    "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.0.0-alpha.27",
+    "@react-navigation/stack": "^5.0.0-alpha.58",
     "axios": "^0.19.1",
     "expo": "^36.0.2",
     "expo-asset": "~8.0.0",
@@ -63,13 +64,13 @@
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-axios-middleware": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-screens": "2.0.0-alpha.12",
-    "react-native-safe-area-context": "0.6.0"
+    "redux-thunk": "^2.3.0"
   }
 }
